--- a/hugo.toml
+++ b/hugo.toml
@@ -37,7 +37,7 @@ buildExpired = false
   comments = false
   hidemeta = false
   hideSummary = false
-  showtoc = false
+  showtoc = true
   tocopen = false
 
   [params.assets]
