增加代码切换功能,美化代码显示

--- a/hugo.toml
+++ b/hugo.toml
@@ -28,7 +28,7 @@ buildExpired = false
   ShowShareButtons = true
   ShowPostNavLinks = true
   ShowBreadCrumbs = true
-  ShowCodeCopyButtons = false
+  ShowCodeCopyButtons = true
   ShowWordCount = true
   ShowRssButtonInSectionTermList = true
   UseHugoToc = true
@@ -110,5 +110,10 @@ buildExpired = false
 [markup]
   [markup.highlight]
     noClasses = false
+    anchorLineNos = true
+    codeFences = true
+    guessSyntax = true
+    lineNos = true
+    style = "monokai"
 
 
